# Sentry

./: README.md
collab-booster/backend/: Dockerfile  pyproject.toml
collab-booster/backend/src/: config.py  main.py
collab-booster/backend/src/agents/: service.py  state.py
collab-booster/backend/src/agents/graphs/: code_qa_graph.py  code_to_bizdoc_graph.py  commit_explainer_graph.py  implementation_guidance_graph.py  onboarding_graph.py  req_to_jira_graph.py  vacation_catchup_graph.py
collab-booster/backend/src/agents/outputs/: structured.py
collab-booster/backend/src/agents/tools/: file_tool.py  (+3 more)
collab-booster/backend/src/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
collab-booster/backend/src/cockpit/: ba_router.py  dev_router.py
collab-booster/backend/src/common/: database.py  exceptions.py  openai_client.py  qdrant.py  redis.py  streaming.py
collab-booster/backend/src/jira/: models.py  router.py  schemas.py  seed.py  service.py  tldr.py
collab-booster/backend/src/repo/: cleanup.py  cloner.py  context_service.py  embedder.py  indexer.py  models.py  router.py  runtime.py  schemas.py  service.py
collab-booster/backend/src/search/: bm25_engine.py  fusion.py  router.py  schemas.py  service.py  vector_engine.py
collab-booster/backend/tests/: test_smoke.py
collab-booster/backend/tests/test_auth/: test_models.py
collab-booster/backend/tests/test_jira/: test_models.py
collab-booster/backend/tests/test_repo/: test_ast_chunker.py  test_markdown_chunker.py
collab-booster/backend/tests/test_search/: test_bm25.py  test_fusion.py
(+51 files in other folders)
